fixed home view it now shows the username when logged in

--- a/UfcFightSystem/src/main/resources/home-view.fxml
+++ b/UfcFightSystem/src/main/resources/home-view.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="551.0" prefWidth="876.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.view.controller.HomeController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="551.0" prefWidth="876.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.view.controller.HomeController">
     <children>
         <VBox layoutX="-5.0" prefHeight="551.0" prefWidth="279.0" style="-fx-background-color: #455a64;" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
@@ -19,14 +19,14 @@
                         </ImageView>
                     </children>
                 </Pane>
-                <Button alignment="BASELINE_LEFT" fx:id="btn_fighters" graphicTextGap="15.0" mnemonicParsing="false" prefHeight="67.0" prefWidth="289.0" stylesheets="@css/homeStyle.css" text="Fighters" textFill="WHITE">
+                <Button fx:id="btn_fighters" alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" prefHeight="67.0" prefWidth="289.0" stylesheets="@css/homeStyle.css" text="Fighters" textFill="WHITE">
                     <padding>
                         <Insets left="50.0" />
                     </padding>
                     <font>
                         <Font name="Arial Rounded MT Bold" size="13.0" />
                     </font></Button>
-                <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="67.0" prefWidth="289.0" stylesheets="@css/homeStyle.css" text="Fight" textFill="WHITE" fx:id="btnFighters">
+                <Button fx:id="btnFighters" alignment="BASELINE_LEFT" graphicTextGap="15.0" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="67.0" prefWidth="289.0" stylesheets="@css/homeStyle.css" text="Fight" textFill="WHITE">
                     <padding>
                         <Insets left="50.0" />
                     </padding>
@@ -51,7 +51,7 @@
                     </font>
                 </Button>
             </children></VBox>
-        <Label fx:id="label_welcome" layoutX="444.0" layoutY="61.0" text="Welcome!">
+        <Label fx:id="label_welcome" layoutX="514.0" layoutY="65.0" text="Welcome!">
             <font>
                 <Font name="Arial Rounded MT Bold" size="24.0" />
             </font>
