--- a/UfcFightSystem/src/main/resources/details-view.fxml
+++ b/UfcFightSystem/src/main/resources/details-view.fxml
@@ -1,56 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import java.util.*?>
+<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.media.*?>
-<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="551.0" prefWidth="876.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.view.controller.DetailsController">
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.text.Font?>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="551.0" prefWidth="876.0" xmlns="http://javafx.com/javafx/17.0.2-ea"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="org.example.view.controller.DetailsController">
 
     <children>
-        <ImageView fitHeight="108.0" fitWidth="135.0" layoutX="28.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView  fitHeight="108.0" fitWidth="135.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@img/black_ufc_logo.png" />
             </image>
         </ImageView>
-        <ImageView fx:id="imageFighter" fitHeight="150.0" fitWidth="200.0" layoutX="225.0" layoutY="69.0" pickOnBounds="true" preserveRatio="true" />
-        <Label fx:id="nameLabel" layoutX="351.0" layoutY="46.0" prefHeight="46.0" prefWidth="244.0" text="NAME OF THE FIGHTER">
+        <ImageView  fx:id="imageFighter" fitHeight="150.0" fitWidth="200.0" layoutX="225.0" layoutY="69.0" pickOnBounds="true" preserveRatio="true" />
+        <Label fx:id="nameLabel" layoutX="179.0" layoutY="6.0" prefHeight="46.0" prefWidth="361.0" text="NAME OF THE FIGHTER">
             <font>
                 <Font name="Arial Black" size="18.0" />
             </font>
         </Label>
-        <Label fx:id="labelAge" layoutX="60.0" layoutY="180.0" prefHeight="22.0" prefWidth="34.0" text="Age:">
+        <Label fx:id="labelAge" layoutX="54.0" layoutY="136.0" text="AGE:">
             <font>
-                <Font name="Ebrima Bold" size="16.0" />
+                <Font size="14.0" />
             </font>
         </Label>
-        <Label fx:id="recordLabel" layoutX="58.0" layoutY="219.0" text="Record:">
+        <Label fx:id="recordLabel" layoutX="49.0" layoutY="170.0" text="Record">
             <font>
-                <Font name="Ebrima Bold" size="16.0" />
+                <Font size="14.0" />
             </font>
         </Label>
-        <Label fx:id="rankLabel" layoutX="55.0" layoutY="264.0" prefHeight="22.0" prefWidth="44.0" text="Rank:">
+        <Label fx:id="rankLabel" layoutX="53.0" layoutY="211.0" text="Rank">
             <font>
-                <Font name="Ebrima Bold" size="16.0" />
+                <Font size="14.0" />
             </font>
         </Label>
-        <Label fx:id="divisionLabel" layoutX="54.0" layoutY="309.0" styleClass="divisionLabel" text="Division:">
+        <Label layoutX="47.0" layoutY="259.0" styleClass="divisionLabel" fx:id="divisionLabel" text="Division">
             <font>
-                <Font name="Ebrima Bold" size="16.0" />
+                <Font size="14.0" />
             </font>
         </Label>
 
-        <Label fx:id="nickNameLabel" layoutX="56.0" layoutY="356.0" text="Nickname:">
+        <Label layoutX="47.0" layoutY="270.0"  fx:id="nickNameLabel" text="Nickname">
             <font>
-                <Font name="Ebrima Bold" size="16.0" />
+                <Font size="14.0" />
             </font>
         </Label>
-      <MediaView fx:id="mediaView" fitHeight="200.0" fitWidth="200.0" layoutX="586.0" layoutY="156.0" />
-      <ImageView fx:id="btn_back_to_menu" fitHeight="22.0" fitWidth="23.0" layoutX="823.0" layoutY="31.0" onMouseClicked="#back_to_menu" pickOnBounds="true" preserveRatio="true" styleClass="backBtn">
-         <image>
-            <Image url="@img/arrowback.png" />
-         </image>
-      </ImageView>
+
+        <Button layoutX="547.0" layoutY="6.0" mnemonicParsing="false" text="Back" onAction="#btnOnBack">
+            <font>
+                <Font name="Arial Black" size="11.0" />
+            </font>
+        </Button>
     </children>
 </AnchorPane>
