--- a/UfcFightSystem/src/main/resources/fighters-view.fxml
+++ b/UfcFightSystem/src/main/resources/fighters-view.fxml
@@ -14,35 +14,56 @@
                 <Font name="Arial Black" size="16.0" />
             </font>
         </Label>
-        <Button layoutX="368.0" layoutY="303.0" mnemonicParsing="false" onAction="#btnOnFighterDetails" styleClass="loginBtn" stylesheets="@css/loginStyle.css" text="DETAILS">
+        <Button layoutX="368.0" layoutY="303.0" mnemonicParsing="false" onAction="#btnOnFighterDetails" styleClass="loginBtn" stylesheets="@css/loginStyle.css" text="Details">
             <font>
-                <Font name="Berlin Sans FB Bold" size="12.0" />
+                <Font name="System Bold" size="12.0" />
             </font>
         </Button>
-        <ImageView fitHeight="32.0" fitWidth="126.0" layoutX="34.0" layoutY="18.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="38.0" fitWidth="75.0" layoutX="28.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@img/ufc_logo.png" />
             </image>
         </ImageView>
-        <Button layoutX="530.0" layoutY="14.0" mnemonicParsing="false" onAction="#btnOnHome" styleClass="loginBtn" stylesheets="@css/loginStyle.css" text="HOME" underline="true">
-            <font>
-                <Font name="Arial Black" size="12.0" />
-            </font>
+        <Button layoutX="530.0" layoutY="21.0" mnemonicParsing="false" onAction="#btnOnHome" styleClass="loginBtn" stylesheets="@css/loginStyle.css" text="Home">
             <effect>
                 <Bloom threshold="1.0" />
             </effect>
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
         </Button>
         <TextField fx:id="nameField" layoutX="62.0" layoutY="103.0" />
         <TextField fx:id="ageField" layoutX="62.0" layoutY="141.0" />
         <TextField fx:id="recordField" layoutX="62.0" layoutY="178.0" />
         <TextField fx:id="divisionField" layoutX="62.0" layoutY="215.0" />
         <TextField fx:id="nickNameField" layoutX="62.0" layoutY="249.0" />
-        <Label layoutX="14.0" layoutY="75.0">Make your own UFC Fighter</Label>
-        <Label layoutX="14.0" layoutY="107.0" text="Name:" />
-        <Label layoutX="17.0" layoutY="145.0" text="Rank:" />
-        <Label layoutX="6.0" layoutY="219.0" text="Division:" />
-        <Label layoutX="8.0" layoutY="182.0" text="Record:" />
-        <Label layoutX="3.0" layoutY="253.0" text="Nickname:" />
-        <Button layoutX="98.0" layoutY="283.0" mnemonicParsing="false" onAction="#btnOnInsert" styleClass="loginBtn" stylesheets="@css/loginStyle.css" text="Add" />
+        <Label layoutX="43.0" layoutY="74.0" text="Make your own UFC Fighter">
+         <font>
+            <Font name="Ebrima Bold" size="12.0" />
+         </font></Label>
+        <Label layoutX="9.0" layoutY="108.0" prefHeight="15.0" prefWidth="56.0" text="Name:">
+         <font>
+            <Font name="Ebrima Bold" size="12.0" />
+         </font></Label>
+        <Label layoutX="9.0" layoutY="146.0" prefHeight="15.0" prefWidth="56.0" text="Rank:">
+         <font>
+            <Font name="Ebrima Bold" size="12.0" />
+         </font></Label>
+        <Label layoutX="9.0" layoutY="218.0" prefHeight="18.0" prefWidth="56.0" text="Division:">
+         <font>
+            <Font name="Ebrima Bold" size="12.0" />
+         </font></Label>
+        <Label layoutX="8.0" layoutY="182.0" prefHeight="15.0" prefWidth="56.0" text="Record:">
+         <font>
+            <Font name="Ebrima Bold" size="12.0" />
+         </font></Label>
+        <Label layoutX="3.0" layoutY="253.0" text="Nickname:">
+         <font>
+            <Font name="Ebrima Bold" size="12.0" />
+         </font></Label>
+        <Button layoutX="98.0" layoutY="283.0" mnemonicParsing="false" onAction="#btnOnInsert" styleClass="loginBtn" stylesheets="@css/loginStyle.css" text="Add">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Button>
     </children>
 </AnchorPane>
