--- a/UfcFightSystem/src/main/resources/details-view.fxml
+++ b/UfcFightSystem/src/main/resources/details-view.fxml
@@ -1,61 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.text.Font?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="551.0" prefWidth="876.0" xmlns="http://javafx.com/javafx/17.0.2-ea"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="org.example.view.controller.DetailsController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="551.0" prefWidth="876.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.view.controller.DetailsController">
 
     <children>
-        <ImageView  fitHeight="108.0" fitWidth="135.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="108.0" fitWidth="135.0" layoutX="46.0" layoutY="36.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@img/black_ufc_logo.png" />
             </image>
         </ImageView>
-        <ImageView  fx:id="imageFighter" fitHeight="150.0" fitWidth="200.0" layoutX="225.0" layoutY="69.0" pickOnBounds="true" preserveRatio="true" />
-        <Label fx:id="nameLabel" layoutX="179.0" layoutY="6.0" prefHeight="46.0" prefWidth="361.0" text="NAME OF THE FIGHTER">
+        <ImageView fx:id="imageFighter" fitHeight="150.0" fitWidth="200.0" layoutX="225.0" layoutY="69.0" pickOnBounds="true" preserveRatio="true" />
+        <Label fx:id="nameLabel" layoutX="359.0" layoutY="36.0" prefHeight="46.0" prefWidth="245.0" text="NAME OF THE FIGHTER">
             <font>
                 <Font name="Arial Black" size="18.0" />
             </font>
         </Label>
-        <Label fx:id="labelAge" layoutX="54.0" layoutY="136.0" text="AGE:">
+        <Label fx:id="labelAge" layoutX="45.0" layoutY="187.0" prefHeight="22.0" prefWidth="80.0" text="Age:">
             <font>
-                <Font size="14.0" />
+                <Font name="Ebrima Bold" size="16.0" />
             </font>
         </Label>
-        <Label fx:id="recordLabel" layoutX="49.0" layoutY="170.0" text="Record">
+        <Label fx:id="recordLabel" layoutX="45.0" layoutY="235.0" prefHeight="22.0" prefWidth="80.0" text="Record:">
             <font>
-                <Font size="14.0" />
+                <Font name="Ebrima Bold" size="16.0" />
             </font>
         </Label>
-        <Label fx:id="rankLabel" layoutX="53.0" layoutY="211.0" text="Rank">
+        <Label fx:id="rankLabel" layoutX="45.0" layoutY="276.0" prefHeight="22.0" prefWidth="80.0" text="Rank:">
             <font>
-                <Font size="14.0" />
+                <Font name="Ebrima Bold" size="16.0" />
             </font>
         </Label>
-        <Label layoutX="47.0" layoutY="259.0" styleClass="divisionLabel" fx:id="divisionLabel" text="Division">
+        <Label fx:id="divisionLabel" layoutX="45.0" layoutY="318.0" prefHeight="22.0" prefWidth="80.0" styleClass="divisionLabel" text="Division:">
             <font>
-                <Font size="14.0" />
-            </font>
-        </Label>
-
-        <Label layoutX="47.0" layoutY="270.0"  fx:id="nickNameLabel" text="Nickname">
-            <font>
-                <Font size="14.0" />
+                <Font name="Ebrima Bold" size="16.0" />
             </font>
         </Label>
 
-        <Button layoutX="547.0" layoutY="6.0" mnemonicParsing="false" text="Back" onAction="#btnOnBack">
+        <Label fx:id="nickNameLabel" layoutX="45.0" layoutY="360.0" text="Nickname:">
             <font>
-                <Font name="Arial Black" size="11.0" />
+                <Font name="Ebrima Bold" size="16.0" />
             </font>
-        </Button>
+        </Label>
+      <ImageView fx:id="btn_back_to_menu" fitHeight="35.0" fitWidth="30.0" layoutX="806.0" layoutY="44.0" onMouseClicked="#back_to_menu" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@img/arrowback.png" />
+         </image>
+      </ImageView>
     </children>
 </AnchorPane>
