--- a/UfcFightSystem/src/main/resources/history-view.fxml
+++ b/UfcFightSystem/src/main/resources/history-view.fxml
@@ -1,20 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.example.view.controller.HistoryController"
-            prefHeight="400.0" prefWidth="600.0">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.view.controller.HistoryController">
     <children>
-        <Label layoutX="122.0" layoutY="20.0" prefHeight="32.0" prefWidth="68.0" text="History of:" />
-        <ListView fx:id="historyLv" layoutX="14.0" layoutY="58.0" prefHeight="215.0" prefWidth="456.0" />
-        <Button layoutX="460.0" layoutY="23.0" mnemonicParsing="false" text="Home" />
-        <Button layoutX="71.0" layoutY="280.0" mnemonicParsing="false" text="Delete" />
+        <Label layoutX="28.0" layoutY="20.0" prefHeight="32.0" prefWidth="95.0" text="History of:">
+         <font>
+            <Font name="Ebrima Bold" size="14.0" />
+         </font></Label>
+        <ListView fx:id="historyLv" layoutX="72.0" layoutY="74.0" prefHeight="215.0" prefWidth="456.0" />
+        <Button layoutX="528.0" layoutY="26.0" mnemonicParsing="false" onAction="#btnOnHome" styleClass="loginBtn" stylesheets="@css/loginStyle.css" text="Home">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Button>
+        <Button layoutX="72.0" layoutY="321.0" mnemonicParsing="false" styleClass="loginBtn" stylesheets="@css/loginStyle.css" text="Delete">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Button>
+      <ImageView fitHeight="49.0" fitWidth="95.0" layoutX="271.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@img/ufc_logo.png" />
+         </image>
+      </ImageView>
     </children>
-
 </AnchorPane>
