added close to home

--- a/UfcFightSystem/src/main/resources/home-view.fxml
+++ b/UfcFightSystem/src/main/resources/home-view.fxml
@@ -61,5 +61,10 @@
                 <Font name="System Bold" size="14.0" />
             </font>
         </Button>
+      <ImageView fitHeight="28.0" fitWidth="34.0" layoutX="828.0" layoutY="14.0" onMouseClicked="#close_app" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@img/close.png" />
+         </image>
+      </ImageView>
     </children>
 </AnchorPane>
