--- a/UfcFightSystem/src/main/resources/history-view.fxml
+++ b/UfcFightSystem/src/main/resources/history-view.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.view.controller.HistoryController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.view.controller.HistoryController">
     <children>
-        <Label layoutX="28.0" layoutY="20.0" prefHeight="32.0" prefWidth="95.0" text="History of:">
+        <Label fx:id="hi" layoutX="28.0" layoutY="20.0" prefHeight="32.0" prefWidth="95.0" text="History of:">
          <font>
             <Font name="Ebrima Bold" size="14.0" />
          </font></Label>
@@ -16,7 +16,7 @@
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
-        <Button layoutX="72.0" layoutY="321.0" mnemonicParsing="false" styleClass="loginBtn" stylesheets="@css/loginStyle.css" text="Delete">
+        <Button layoutX="72.0" layoutY="321.0" onAction="#onClearBtn" mnemonicParsing="false" styleClass="loginBtn" stylesheets="@css/loginStyle.css" text="CLEAR">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
