--- a/UfcFightSystem/src/main/resources/fight-choose-view.fxml
+++ b/UfcFightSystem/src/main/resources/fight-choose-view.fxml
@@ -1,39 +1,83 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.view.controller.FightChooseController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="551.0" prefWidth="876.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.view.controller.FightChooseController">
 
     <children>
-        <Label layoutX="207.0" layoutY="7.0" prefHeight="47.0" prefWidth="200.0" text="Chose Your Fighters To Fight">
+        <VBox layoutX="-5.0" prefHeight="551.0" prefWidth="279.0" style="-fx-background-color: #455a64;" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <children>
+                <Pane prefHeight="124.0" prefWidth="279.0">
+                    <children>
+                        <ImageView fitHeight="58.0" fitWidth="141.0" layoutX="56.0" layoutY="38.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@img/black_ufc_logo.png" />
+                            </image>
+                        </ImageView>
+                    </children>
+                </Pane>
+                <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#btn_fighters" prefHeight="67.0" prefWidth="289.0" stylesheets="@css/homeStyle.css" text="Fighters" textFill="WHITE">
+                    <padding>
+                        <Insets left="50.0" />
+                    </padding>
+                    <font>
+                        <Font name="Arial Rounded MT Bold" size="13.0" />
+                    </font></Button>
+                <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#btnFighters" prefHeight="67.0" prefWidth="289.0" stylesheets="@css/homeStyle.css" text="Fight" textFill="WHITE">
+                    <padding>
+                        <Insets left="50.0" />
+                    </padding>
+                    <font>
+                        <Font name="Arial Rounded MT Bold" size="13.0" />
+                    </font>
+                </Button>
+                <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#onBtnHistory" prefHeight="67.0" prefWidth="289.0" stylesheets="@css/homeStyle.css" text="History" textFill="WHITE">
+                    <padding>
+                        <Insets left="50.0" />
+                    </padding>
+                    <font>
+                        <Font name="Arial Rounded MT Bold" size="13.0" />
+                    </font>
+                </Button>
+                <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" layoutX="10.0" layoutY="212.0" mnemonicParsing="false" onAction="#logoutBtn" prefHeight="67.0" prefWidth="289.0" stylesheets="@css/homeStyle.css" text="Log out" textFill="WHITE">
+                    <padding>
+                        <Insets left="50.0" />
+                    </padding>
+                    <font>
+                        <Font name="Arial Rounded MT Bold" size="13.0" />
+                    </font>
+                </Button>
+            </children></VBox>
+        <Label layoutX="483.0" layoutY="54.0" prefHeight="47.0" prefWidth="200.0" text="Chose Your Fighters To Fight">
             <font>
                 <Font name="System Bold" size="14.0" />
             </font>
         </Label>
-        <Button fx:id="btnHome" layoutX="527.0" layoutY="18.0" mnemonicParsing="false" styleClass="loginBtn" stylesheets="@css/loginStyle.css" text="Home">
+        <Button fx:id="btnHome" layoutX="289.0" layoutY="22.0" mnemonicParsing="false" styleClass="loginBtn" stylesheets="@css/loginStyle.css" text="Home">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
-        <ListView fx:id="fighterLv" layoutX="207.0" layoutY="54.0" prefHeight="200.0" prefWidth="200.0" />
-        <Button layoutX="272.0" layoutY="337.0" mnemonicParsing="false" onAction="#onFightBtn" prefHeight="26.0" prefWidth="56.0" styleClass="loginBtn" stylesheets="@css/loginStyle.css" text="FIGHT">
+        <ListView fx:id="fighterLv" layoutX="483.0" layoutY="102.0" prefHeight="200.0" prefWidth="200.0" />
+        <Button layoutX="554.0" layoutY="384.0" mnemonicParsing="false" onAction="#onFightBtn" prefHeight="26.0" prefWidth="58.0" styleClass="loginBtn" stylesheets="@css/loginStyle.css" text="FIGHT">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
-        <Button layoutX="272.0" layoutY="262.0" mnemonicParsing="false" onAction="#onChooseBtn" styleClass="loginBtn" stylesheets="@css/loginStyle.css" text="Choose">
+        <Button layoutX="554.0" layoutY="319.0" mnemonicParsing="false" onAction="#onChooseBtn" styleClass="loginBtn" stylesheets="@css/loginStyle.css" text="Choose">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
-        <Label fx:id="fighter1Label" layoutX="171.0" layoutY="301.0" text="Fighter1" />
-        <Label layoutX="293.0" layoutY="301.0" text="VS" />
-        <Label fx:id="fighter2Label" layoutX="385.0" layoutY="301.0" text="Fighter2" />
-        <ImageView fitHeight="47.0" fitWidth="173.0" layoutX="40.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-                <Image url="@img/ufc_logo.png" />
-            </image>
-        </ImageView>
+        <Label fx:id="fighter1Label" layoutX="421.0" layoutY="349.0" prefHeight="26.0" prefWidth="93.0" text="Fighter1" />
+        <Label layoutX="575.0" layoutY="354.0" text="VS" />
+        <Label fx:id="fighter2Label" layoutX="670.0" layoutY="353.0" prefHeight="18.0" prefWidth="94.0" text="Fighter2" />
+      <ImageView fitHeight="26.0" fitWidth="44.0" layoutX="827.0" layoutY="22.0" onMouseClicked="#close_app" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@img/close.png" />
+         </image>
+      </ImageView>
     </children>
 
 
