--- a/UfcFightSystem/src/main/resources/fighters-view.fxml
+++ b/UfcFightSystem/src/main/resources/fighters-view.fxml
@@ -1,30 +1,72 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.effect.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.view.controller.FightersViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="551.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.view.controller.FightersViewController">
+
+
     <children>
-        <ListView fx:id="fightersLv" layoutX="260.0" layoutY="83.0" prefHeight="200.0" prefWidth="305.0" />
-        <Label layoutX="213.0" layoutY="8.0" prefHeight="51.0" prefWidth="173.0" text="Fighters of the UFC">
+        <VBox layoutX="-5.0" prefHeight="551.0" prefWidth="279.0" style="-fx-background-color: #455a64;" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <children>
+                <Pane prefHeight="124.0" prefWidth="279.0">
+                    <children>
+                        <ImageView fitHeight="58.0" fitWidth="141.0" layoutX="56.0" layoutY="38.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@img/black_ufc_logo.png" />
+                            </image>
+                        </ImageView>
+                    </children>
+                </Pane>
+                <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#btn_fighters" prefHeight="67.0" prefWidth="289.0" stylesheets="@css/homeStyle.css" text="Fighters" textFill="WHITE">
+                    <padding>
+                        <Insets left="50.0" />
+                    </padding>
+                    <font>
+                        <Font name="Arial Rounded MT Bold" size="13.0" />
+                    </font></Button>
+                <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#btnFighters" prefHeight="67.0" prefWidth="289.0" stylesheets="@css/homeStyle.css" text="Fight" textFill="WHITE">
+                    <padding>
+                        <Insets left="50.0" />
+                    </padding>
+                    <font>
+                        <Font name="Arial Rounded MT Bold" size="13.0" />
+                    </font>
+                </Button>
+                <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#onBtnHistory" prefHeight="67.0" prefWidth="289.0" stylesheets="@css/homeStyle.css" text="History" textFill="WHITE">
+                    <padding>
+                        <Insets left="50.0" />
+                    </padding>
+                    <font>
+                        <Font name="Arial Rounded MT Bold" size="13.0" />
+                    </font>
+                </Button>
+                <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" layoutX="10.0" layoutY="212.0" mnemonicParsing="false" onAction="#logoutBtn" prefHeight="67.0" prefWidth="289.0" stylesheets="@css/homeStyle.css" text="Log out" textFill="WHITE">
+                    <padding>
+                        <Insets left="50.0" />
+                    </padding>
+                    <font>
+                        <Font name="Arial Rounded MT Bold" size="13.0" />
+                    </font>
+                </Button>
+            </children></VBox>
+
+        <ListView fx:id="fightersLv" layoutX="608.0" layoutY="158.0" prefHeight="200.0" prefWidth="305.0" />
+        <Label layoutX="673.0" layoutY="103.0" prefHeight="54.0" prefWidth="190.0" text="Fighters of the UFC">
             <font>
-                <Font name="Arial Black" size="16.0" />
+                <Font name="Ebrima Bold" size="16.0" />
             </font>
         </Label>
-        <Button layoutX="368.0" layoutY="303.0" mnemonicParsing="false" onAction="#btnOnFighterDetails" styleClass="loginBtn" stylesheets="@css/loginStyle.css" text="Details">
+        <Button layoutX="733.0" layoutY="376.0" mnemonicParsing="false" onAction="#btnOnFighterDetails" styleClass="loginBtn" stylesheets="@css/loginStyle.css" text="Details">
             <font>
                 <Font name="System Bold" size="12.0" />
             </font>
         </Button>
-        <ImageView fitHeight="38.0" fitWidth="75.0" layoutX="28.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-                <Image url="@img/ufc_logo.png" />
-            </image>
-        </ImageView>
-        <Button layoutX="530.0" layoutY="21.0" mnemonicParsing="false" onAction="#btnOnHome" styleClass="loginBtn" stylesheets="@css/loginStyle.css" text="Home">
+        <Button layoutX="316.0" layoutY="34.0" mnemonicParsing="false" onAction="#btnOnHome" styleClass="loginBtn" stylesheets="@css/loginStyle.css" text="Home">
             <effect>
                 <Bloom threshold="1.0" />
             </effect>
@@ -32,38 +74,48 @@
             <Font name="System Bold" size="12.0" />
          </font>
         </Button>
-        <TextField fx:id="nameField" layoutX="62.0" layoutY="103.0" />
-        <TextField fx:id="ageField" layoutX="62.0" layoutY="141.0" />
-        <TextField fx:id="recordField" layoutX="62.0" layoutY="178.0" />
-        <TextField fx:id="divisionField" layoutX="62.0" layoutY="215.0" />
-        <TextField fx:id="nickNameField" layoutX="62.0" layoutY="249.0" />
-        <Label layoutX="43.0" layoutY="74.0" text="Make your own UFC Fighter">
+        <TextField fx:id="nameField" layoutX="368.0" layoutY="160.0" />
+        <TextField fx:id="ageField" layoutX="368.0" layoutY="197.0" />
+        <TextField fx:id="recordField" layoutX="368.0" layoutY="232.0" />
+        <TextField fx:id="divisionField" layoutX="368.0" layoutY="270.0" />
+        <TextField fx:id="nickNameField" layoutX="368.0" layoutY="310.0" />
+        <Label layoutX="316.0" layoutY="123.0" text="Make your own UFC Fighter">
+         <font>
+            <Font name="Ebrima Bold" size="14.0" />
+         </font></Label>
+        <Label layoutX="285.0" layoutY="165.0" prefHeight="15.0" prefWidth="56.0" text="Name:">
          <font>
             <Font name="Ebrima Bold" size="12.0" />
          </font></Label>
-        <Label layoutX="9.0" layoutY="108.0" prefHeight="15.0" prefWidth="56.0" text="Name:">
+        <Label layoutX="285.0" layoutY="202.0" prefHeight="15.0" prefWidth="56.0" text="Rank:">
          <font>
             <Font name="Ebrima Bold" size="12.0" />
          </font></Label>
-        <Label layoutX="9.0" layoutY="146.0" prefHeight="15.0" prefWidth="56.0" text="Rank:">
+        <Label layoutX="285.0" layoutY="273.0" prefHeight="18.0" prefWidth="56.0" text="Division:">
          <font>
             <Font name="Ebrima Bold" size="12.0" />
          </font></Label>
-        <Label layoutX="9.0" layoutY="218.0" prefHeight="18.0" prefWidth="56.0" text="Division:">
+        <Label layoutX="285.0" layoutY="237.0" prefHeight="15.0" prefWidth="56.0" text="Record:">
          <font>
             <Font name="Ebrima Bold" size="12.0" />
          </font></Label>
-        <Label layoutX="8.0" layoutY="182.0" prefHeight="15.0" prefWidth="56.0" text="Record:">
+        <Label layoutX="283.0" layoutY="315.0" text="Nickname:">
          <font>
             <Font name="Ebrima Bold" size="12.0" />
          </font></Label>
-        <Label layoutX="3.0" layoutY="253.0" text="Nickname:">
-         <font>
-            <Font name="Ebrima Bold" size="12.0" />
-         </font></Label>
-        <Button layoutX="98.0" layoutY="283.0" mnemonicParsing="false" onAction="#btnOnInsert" styleClass="loginBtn" stylesheets="@css/loginStyle.css" text="Add">
+        <Button layoutX="403.0" layoutY="376.0" mnemonicParsing="false" onAction="#btnOnInsert" styleClass="loginBtn" stylesheets="@css/loginStyle.css" text="Add">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
+      <ImageView fitHeight="67.0" fitWidth="133.0" layoutX="613.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@img/ufc_logo.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="32.0" fitWidth="40.0" layoutX="939.0" layoutY="31.0" onMouseClicked="#close_app" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@img/close.png" />
+         </image>
+      </ImageView>
     </children>
 </AnchorPane>
