--- a/UfcFightSystem/src/main/resources/history-view.fxml
+++ b/UfcFightSystem/src/main/resources/history-view.fxml
@@ -1,28 +1,77 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.view.controller.HistoryController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="551.0" prefWidth="876.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.view.controller.HistoryController">
     <children>
-        <Label fx:id="hi" layoutX="28.0" layoutY="20.0" prefHeight="32.0" prefWidth="95.0" text="History of:">
+        <VBox layoutX="-5.0" prefHeight="551.0" prefWidth="279.0" style="-fx-background-color: #455a64;" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <children>
+                <Pane prefHeight="124.0" prefWidth="279.0">
+                    <children>
+                        <ImageView fitHeight="58.0" fitWidth="141.0" layoutX="56.0" layoutY="38.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@img/black_ufc_logo.png" />
+                            </image>
+                        </ImageView>
+                    </children>
+                </Pane>
+                <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#btn_fighters" prefHeight="67.0" prefWidth="289.0" stylesheets="@css/homeStyle.css" text="Fighters" textFill="WHITE">
+                    <padding>
+                        <Insets left="50.0" />
+                    </padding>
+                    <font>
+                        <Font name="Arial Rounded MT Bold" size="13.0" />
+                    </font></Button>
+                <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#btnFighters" prefHeight="67.0" prefWidth="289.0" stylesheets="@css/homeStyle.css" text="Fight" textFill="WHITE">
+                    <padding>
+                        <Insets left="50.0" />
+                    </padding>
+                    <font>
+                        <Font name="Arial Rounded MT Bold" size="13.0" />
+                    </font>
+                </Button>
+                <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#onBtnHistory" prefHeight="67.0" prefWidth="289.0" stylesheets="@css/homeStyle.css" text="History" textFill="WHITE">
+                    <padding>
+                        <Insets left="50.0" />
+                    </padding>
+                    <font>
+                        <Font name="Arial Rounded MT Bold" size="13.0" />
+                    </font>
+                </Button>
+                <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" layoutX="10.0" layoutY="212.0" mnemonicParsing="false" onAction="#logoutBtn" prefHeight="67.0" prefWidth="289.0" stylesheets="@css/homeStyle.css" text="Log out" textFill="WHITE">
+                    <padding>
+                        <Insets left="50.0" />
+                    </padding>
+                    <font>
+                        <Font name="Arial Rounded MT Bold" size="13.0" />
+                    </font>
+                </Button>
+            </children></VBox>
+        <Label fx:id="hi" layoutX="351.0" layoutY="93.0" prefHeight="32.0" prefWidth="95.0" text="History of:">
          <font>
             <Font name="Ebrima Bold" size="14.0" />
          </font></Label>
-        <ListView fx:id="historyLv" layoutX="72.0" layoutY="74.0" prefHeight="215.0" prefWidth="456.0" />
-        <Button layoutX="528.0" layoutY="26.0" mnemonicParsing="false" onAction="#btnOnHome" styleClass="loginBtn" stylesheets="@css/loginStyle.css" text="Home">
+        <ListView fx:id="historyLv" layoutX="351.0" layoutY="132.0" prefHeight="215.0" prefWidth="456.0" />
+        <Button layoutX="292.0" layoutY="27.0" mnemonicParsing="false" onAction="#btnOnHome" styleClass="loginBtn" stylesheets="@css/loginStyle.css" text="Home">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
-        <Button layoutX="72.0" layoutY="321.0" onAction="#onClearBtn" mnemonicParsing="false" styleClass="loginBtn" stylesheets="@css/loginStyle.css" text="CLEAR">
+        <Button layoutX="552.0" layoutY="373.0" mnemonicParsing="false" onAction="#onClearBtn" styleClass="loginBtn" stylesheets="@css/loginStyle.css" text="CLEAR">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
-      <ImageView fitHeight="49.0" fitWidth="95.0" layoutX="271.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="49.0" fitWidth="95.0" layoutX="561.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@img/ufc_logo.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="94.0" fitWidth="44.0" layoutX="818.0" layoutY="23.0" onMouseClicked="#close_app" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@img/close.png" />
          </image>
       </ImageView>
     </children>
