fixed a lot. added regex to add figher. fixed many issues and made design more beautiful. changed division to combobox

--- a/UfcFightSystem/src/main/resources/login-view.fxml
+++ b/UfcFightSystem/src/main/resources/login-view.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.view.controller.LoginController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.view.controller.LoginController">
     <children>
         <VBox alignment="CENTER" prefHeight="600.0" prefWidth="400.0" style="-fx-background-color: #455a64;">
             <children>
@@ -44,16 +44,11 @@
                         <Font name="Ebrima Bold" size="14.0" />
                     </font>
                 </Label>
-                <TextField fx:id="rf_email" layoutX="49.0" layoutY="256.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="300.0" promptText="Email">
+                <TextField fx:id="rf_email" layoutX="48.0" layoutY="271.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="300.0" promptText="Email">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </TextField>
-                <Label layoutX="233.0" layoutY="355.0" styleClass="forgetBtn" stylesheets="@css/loginStyle.css" text="Forget Password?" textFill="#a3a3a3">
-                    <font>
-                        <Font name="Ebrima" size="14.0" />
-                    </font>
-                </Label>
                 <Button fx:id="btn_login" layoutX="49.0" layoutY="387.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="50.0" prefWidth="300.0" styleClass="loginBtn" stylesheets="@css/loginStyle.css" text="Login">
                     <font>
                         <Font name="System Bold" size="14.0" />
@@ -71,7 +66,7 @@
                         <Image url="@img/close.png" />
                     </image>
                 </ImageView>
-                <PasswordField fx:id="rf_password" layoutX="49.0" layoutY="306.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="300.0" promptText="Password">
+                <PasswordField fx:id="rf_password" layoutX="48.0" layoutY="321.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="300.0" promptText="Password">
                     <font>
                         <Font size="14.0" />
                     </font>
