--- a/UfcFightSystem/src/main/resources/details-view.fxml
+++ b/UfcFightSystem/src/main/resources/details-view.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="551.0" prefWidth="876.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.view.controller.DetailsController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="551.0" prefWidth="876.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.view.controller.DetailsController">
 
     <children>
         <VBox layoutX="-5.0" prefHeight="551.0" prefWidth="279.0" style="-fx-background-color: #455a64;" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -52,8 +52,8 @@
                     </font>
                 </Button>
             </children></VBox>
-        <ImageView fx:id="imageFighter" fitHeight="242.0" fitWidth="267.0" layoutX="484.0" layoutY="67.0" pickOnBounds="true" preserveRatio="true" />
-        <Label fx:id="nameLabel" layoutX="464.0" layoutY="21.0" prefHeight="46.0" prefWidth="245.0" text="NAME OF THE FIGHTER">
+        <ImageView fx:id="imageFighter" fitHeight="242.0" fitWidth="267.0" layoutX="515.0" layoutY="67.0" pickOnBounds="true" preserveRatio="true" />
+        <Label fx:id="nameLabel" layoutX="526.0" layoutY="20.0" prefHeight="46.0" prefWidth="245.0" text="NAME OF THE FIGHTER">
             <font>
                 <Font name="Arial Black" size="18.0" />
             </font>
@@ -84,7 +84,7 @@
             </font>
         </Label>
 
-        <Label  fx:id="nickNameLabel" layoutX="390.0" layoutY="500.0" prefHeight="21.0" prefWidth="171.0" text="Nickname:">
+        <Label fx:id="nickNameLabel" layoutX="390.0" layoutY="500.0" prefHeight="21.0" prefWidth="171.0" text="Nickname:">
             <font>
                 <Font name="Ebrima Bold" size="16.0" />
             </font>
