--- a/UfcFightSystem/src/main/resources/fighters-view.fxml
+++ b/UfcFightSystem/src/main/resources/fighters-view.fxml
@@ -75,10 +75,9 @@
          </font>
         </Button>
         <TextField fx:id="nameField" layoutX="368.0" layoutY="160.0" />
-        <TextField fx:id="ageField" layoutX="368.0" layoutY="197.0" />
+        <TextField fx:id="rankField" layoutX="368.0" layoutY="197.0" />
         <TextField fx:id="recordField" layoutX="368.0" layoutY="232.0" />
-        <TextField fx:id="divisionField" layoutX="368.0" layoutY="270.0" />
-        <TextField fx:id="nickNameField" layoutX="368.0" layoutY="310.0" />
+        <TextField fx:id="nickNameField" layoutX="368.0" layoutY="347.0" />
         <Label layoutX="316.0" layoutY="123.0" text="Make your own UFC Fighter">
          <font>
             <Font name="Ebrima Bold" size="14.0" />
@@ -99,11 +98,11 @@
          <font>
             <Font name="Ebrima Bold" size="12.0" />
          </font></Label>
-        <Label layoutX="283.0" layoutY="315.0" text="Nickname:">
+        <Label layoutX="283.0" layoutY="352.0" text="Nickname:">
          <font>
             <Font name="Ebrima Bold" size="12.0" />
          </font></Label>
-        <Button layoutX="403.0" layoutY="376.0" mnemonicParsing="false" onAction="#btnOnInsert" styleClass="loginBtn" stylesheets="@css/loginStyle.css" text="Add">
+        <Button layoutX="408.0" layoutY="389.0" mnemonicParsing="false" onAction="#btnOnInsert" styleClass="loginBtn" stylesheets="@css/loginStyle.css" text="Add">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
@@ -117,5 +116,13 @@
             <Image url="@img/close.png" />
          </image>
       </ImageView>
+      <Label layoutX="285.0" layoutY="312.0" prefHeight="18.0" prefWidth="56.0" text="Age:">
+         <font>
+            <Font name="Ebrima Bold" size="12.0" />
+         </font>
+      </Label>
+      <TextField fx:id="ageField" layoutX="368.0" layoutY="309.0" />
+      <ComboBox fx:id="divisionField" layoutX="367.0" layoutY="269.0" onAction="#Select" prefWidth="150.0" />
+      <Label fx:id="label" layoutX="513.0" layoutY="400.0" prefHeight="18.0" prefWidth="9.0" text="Label" visible="false" />
     </children>
 </AnchorPane>
